--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,9 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     testCompile 'junit:junit:4.12'
     provided "org.projectlombok:lombok:1.12.6"
+    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.16.1'
+    //compile 'org.sqldroid:sqldroid:1.0.3'
+    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+
+
 }
