--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,23 +18,27 @@ android {
         }
     }
 
-dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    testCompile 'junit:junit:4.12'
-    provided "org.projectlombok:lombok:1.12.6"
-    compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.16.1'
-    //compile 'org.sqldroid:sqldroid:1.0.3'
-    compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
-}
-    packagingOptions {
-        exclude 'META-INF/ASL2.0'
-        exclude 'META-INF/LICENSE'
-        exclude 'META-INF/NOTICE'
-        exclude 'META-INF/NOTICE.txt'
-        exclude 'META-INF/LICENSE.txt'
-        exclude 'META-INF/MANIFEST.MF'
+    dependencies {
+        compile fileTree(dir: 'libs', include: ['*.jar'])
+        androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
+            exclude group: 'com.android.support', module: 'support-annotations'
+        })
+        compile 'com.android.support:appcompat-v7:24.2.1'
+        compile 'com.fasterxml.jackson.core:jackson-core:2.7.3'
+        compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.3'
+        compile 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
+        testCompile 'junit:junit:4.12'
+        provided "org.projectlombok:lombok:1.12.6"
+        compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.16.1'
+        //compile 'org.sqldroid:sqldroid:1.0.3'
+        compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+        packagingOptions {
+                    exclude 'META-INF/ASL2.0'
+                    exclude 'META-INF/LICENSE'
+                    exclude 'META-INF/NOTICE'
+                    exclude 'META-INF/NOTICE.txt'
+                    exclude 'META-INF/LICENSE.txt'
+                    exclude 'META-INF/MANIFEST.MF'
+                }
     }
+}
