previous stages working

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".StageActivity"></activity>
+        <activity android:name=".PreviousStagesActivity"></activity>
     </application>
 
 </manifest>
