--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
+    repositories {
+        mavenCentral()
+    }
     dependencies {
         compile fileTree(dir: 'libs', include: ['*.jar'])
         androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -32,6 +34,7 @@ android {
         compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.16.1'
         //compile 'org.sqldroid:sqldroid:1.0.3'
         compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+        compile 'com.facebook.android:facebook-android-sdk:[4,5)'
         packagingOptions {
                     exclude 'META-INF/ASL2.0'
                     exclude 'META-INF/LICENSE'
