--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id"/>
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         <activity android:name=".MainActivity">
             <intent-filter>
@@ -20,6 +21,16 @@
         </activity>
         <activity android:name=".StageActivity"></activity>
         <activity android:name=".PreviousStagesActivity"></activity>
+        <activity
+            android:name="com.facebook.CustomTabActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+<category android:name="android.intent.category.DEFAULT" />
+<category android:name="android.intent.category.BROWSABLE" />
+<data android:scheme="@string/fb_login_protocol_scheme" />
+    </intent-filter>
+    </activity>
     </application>
 
-</manifest>
+    </manifest>
