--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         </activity>
         <activity android:name=".StageActivity"></activity>
         <activity android:name=".PreviousStagesActivity"></activity>
+        <activity android:name=".LeaderboardsActivity"></activity>
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
