--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,4 @@
 apply plugin: 'com.android.application'
-
 android {
     compileSdkVersion 24
     buildToolsVersion "25.0.0"
@@ -34,14 +33,19 @@ android {
         compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.16.1'
         //compile 'org.sqldroid:sqldroid:1.0.3'
         compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
+        compile 'org.slf4j:slf4j-android:1.7.7'
         compile 'com.facebook.android:facebook-android-sdk:[4,5)'
         packagingOptions {
-                    exclude 'META-INF/ASL2.0'
-                    exclude 'META-INF/LICENSE'
-                    exclude 'META-INF/NOTICE'
-                    exclude 'META-INF/NOTICE.txt'
-                    exclude 'META-INF/LICENSE.txt'
-                    exclude 'META-INF/MANIFEST.MF'
-                }
+            exclude 'META-INF/ASL2.0'
+            exclude 'META-INF/LICENSE'
+            exclude 'META-INF/NOTICE'
+            exclude 'META-INF/NOTICE.txt'
+            exclude 'META-INF/LICENSE.txt'
+            exclude 'META-INF/MANIFEST.MF'
+        }
     }
+}
+
+dependencies {
+
 }
