--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,21 @@
         android:label="@string/app_name"
         android:supportsRtl="false"
         android:theme="@style/AppTheme">
-        <meta-data
-            android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id" />
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/facebook_app_id" />
 
         <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity" android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".StageActivity" />
-        <activity android:name=".PreviousStagesActivity" />
-        <activity android:name=".LeaderboardsActivity" />
+        <activity android:name=".StageActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".PreviousStagesActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".LeaderboardsActivity" android:screenOrientation="portrait"/>
+
         <activity
             android:name="com.facebook.CustomTabActivity"
             android:exported="true">
