--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,12 +32,11 @@ android {
         compile 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
         testCompile 'junit:junit:4.12'
         provided "org.projectlombok:lombok:1.12.6"
-        compile group: 'org.xerial', name: 'sqlite-jdbc', version: '3.16.1'
-        //compile 'org.sqldroid:sqldroid:1.0.3'
         compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
         compile 'org.slf4j:slf4j-android:1.7.7'
         compile 'com.facebook.android:facebook-android-sdk:[4,5)'
-        packagingOptions {
+        packagingOptions
+        {
             exclude 'META-INF/ASL2.0'
             exclude 'META-INF/LICENSE'
             exclude 'META-INF/NOTICE'
