--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
         <activity android:name=".StageActivity" android:screenOrientation="portrait"/>
         <activity android:name=".PreviousStagesActivity" android:screenOrientation="portrait"/>
         <activity android:name=".LeaderboardsActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".InstractionsActivity" android:screenOrientation="portrait"/>
+
 
         <activity
             android:name="com.facebook.CustomTabActivity"
