--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,6 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 24
+    compileSdkVersion 25
     buildToolsVersion "25.0.0"
     defaultConfig {
         applicationId "a.atbash"
@@ -9,7 +9,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        
+
     }
     buildTypes {
         release {
@@ -26,7 +26,7 @@ android {
             exclude group: 'com.android.support', module: 'support-annotations'
         })
 
-        compile 'com.android.support:appcompat-v7:24.2.1'
+
         compile 'com.fasterxml.jackson.core:jackson-core:2.7.3'
         compile 'com.fasterxml.jackson.core:jackson-annotations:2.7.3'
         compile 'com.fasterxml.jackson.core:jackson-databind:2.7.3'
@@ -34,21 +34,22 @@ android {
         provided "org.projectlombok:lombok:1.12.6"
         compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
         compile 'org.slf4j:slf4j-android:1.7.7'
-        compile 'com.facebook.android:facebook-android-sdk:[4,5)'
+        compile 'com.facebook.android:facebook-android-sdk:4.8.2'
         packagingOptions
-        {
-            exclude 'META-INF/ASL2.0'
-            exclude 'META-INF/LICENSE'
-            exclude 'META-INF/NOTICE'
-            exclude 'META-INF/NOTICE.txt'
-            exclude 'META-INF/LICENSE.txt'
-            exclude 'META-INF/MANIFEST.MF'
-        }
+                {
+                    exclude 'META-INF/ASL2.0'
+                    exclude 'META-INF/LICENSE'
+                    exclude 'META-INF/NOTICE'
+                    exclude 'META-INF/NOTICE.txt'
+                    exclude 'META-INF/LICENSE.txt'
+                    exclude 'META-INF/MANIFEST.MF'
+                }
     }
 
 }
 
 dependencies {
-    compile 'com.android.support:design:+'
-    compile 'com.android.support:support-v13:24.2.1'
+    compile 'com.android.support:design:25.3.1'
+    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:appcompat-v7:25.3.1'
 }
